--- a/css/default.css
+++ b/css/default.css
@@ -5,7 +5,14 @@
     src: local(''),
          url('../assets/fonts/blaka-v3-latin-regular.woff2') format('woff2'), 
          url('../assets/fonts/blaka-v3-latin-regular.woff') format('woff'); 
-  }
+}
+
+
+@font-face {
+    font-family: 'Olymp';
+    src: url('../assets/fonts/Greece.ttf');
+}
+
 
 html {
     box-sizing: border-box;
@@ -20,7 +27,7 @@ html {
 body {
     position: relative;
     margin: 0;
-    font-family: 'Blaka', cursive;
+    font-family: 'Olymp', cursive;
     font-size: 18px;
     line-height: 1.2;
     color: #18171A;
@@ -63,4 +70,7 @@ img, svg {
     max-width: 1324px;
     margin: 0 auto;
     padding: 0 72px;
+}
+.modal__title {
+    width: 275px;
 }
